[package]
name = "holly"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "🌿 Render videos of osu! replays from the terminal! An o!rdr command line tool."
categories = ["command-line-utilities"]
keywords = ["games", "cli", "osu"]

[dependencies]
rust_socketio = "0.3.0"
serde = "1.0"
serde_json = "1.0"
reqwest = { version = "0.11.0", features = ["multipart"] }
